@@ -3,24 +3,24 @@
 
 Main Author
 ------------
-Marti Maria
+Marti Maria 
 
 
-Contributors
+Contributors 
 ------------
-Bob Friesenhahn
+Bob Friesenhahn 
 Kai-Uwe Behrmann
 Stuart Nixon
 Jordi Vilar
 Richard Hughes
 Auke Nauta
 Chris Evans
-Lorenzo Ridolfi
+Lorenzo Ridolfi 
 
 
-Special Thanks
+Special Thanks 
 --------------
 Jan Morovic
 Jos Vernon (WebSupergoo)
 Harald Schneider (Maxon)
-Christian Albrecht
+Christian Albrecht 
