@@ -21,6 +21,10 @@ Fixed several integer overflow and other integrity checks, thanks to Chris Evans
 linkicc now stores the rendering intent in the profile header
 Fixed delphi interface
 Added Duotone support (Bilinear interpolation)
+Fixed a bug on curve reversing when source curves have few points
+Added bound check in floating point interpolation
 
 2.1 Maintenance release
 -----------------------
+
+Fixed a bug in absolute colorimetric intent
